feat: adding login

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lucide-react": "^0.331.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
@@ -59,6 +60,7 @@
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.9",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
