--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.9",
+    "recharts": "^2.12.1",
     "server-only": "^0.0.1",
     "sonner": "^1.4.1",
     "superjson": "^2.2.1",
