--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.331.0",
     "next": "^14.0.4",
