--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.6",
     "lucide-react": "^0.331.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
