feat: adding receipts and expenses pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["aceternity", "dayjs", "kaeru", "KAERU"]
+  "cSpell.words": [
+    "aceternity",
+    "cartao",
+    "dayjs",
+    "descricao",
+    "efetivacao",
+    "estatisticas",
+    "kaeru",
+    "KAERU",
+    "lancamento",
+    "observacoes"
+  ]
 }
